--- a/config/database.yml
+++ b/config/database.yml
@@ -15,9 +15,9 @@
 development:
   adapter: postgresql
   encoding: unicode
-  database: hansearch_development
+  database: hansearch2_development
   pool: 5
-  username: hansearch
+  username: ubuntu
   password:
 
   # Connect on a TCP socket. Omitted by default since the client uses a
@@ -41,15 +41,15 @@ development:
 test:
   adapter: postgresql
   encoding: unicode
-  database: hansearch_test
+  database: hansearch2_test
   pool: 5
-  username: hansearch
+  username: ubuntu
   password:
 
 production:
   adapter: postgresql
   encoding: unicode
-  database: hansearch_production
+  database: hansearch2_production
   pool: 5
   username: ubuntu
   password:
